src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-omT-dwF1000-dhP0.5-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-fullscreen true\n    open-maximized true\n    default-column-width { fixed 1000; }\n    default-window-height { proportion 0.5; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1256 × 696, bounds: 1256 × 696, states: [Activated]
